--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>XP Particles with Momentum Loss & Levelize</title>
+  <title>Level Incremental</title>
   <style>
     body {
       margin: 20px;
